<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">互助抗癌</string>
    <string name="app_close">关闭程序</string>
    <string name="cancel">取 消</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_back">&#060;&#060;</string>
    <string name="title_add_case_single">+</string>
    <string name="at">"@"</string>
    <string name="waiting">请等待...</string>
    <string name="wrong_info_passwd">密码两次输入不同或格式不对</string>
    <string name="mycasses">我的病例</string>
    <string name="main_my_acount">我的帐户</string>
    <string name="main_message">消息</string>
    <string name="main_home_page">主页</string>
    <string name="main_safety_center">安全中心</string>
    <string name="main_more">更多</string>
    <string name="newAdvice">我要反馈</string>
    <string name="setting">设置</string>
    <string name="accountExit">退出当前账号</string>
    <string name="official">官方微博</string>
    <string name="feedback">意见反馈</string>
    <string name="version">检测新版本</string>
    <string name="readMode">浏览模式</string>
    <string name="about">关于</string>
    <string name="text_sure">确定</string>
    <string name="text_login_title">用户登录</string>
    <string name="text_message_detail">消息详情</string>
    <string name="text_advice_detail">意见反馈详情</string>
    <string name="text_login_user_name">帐&#160;号&#160;&#160;</string>
    <string name="text_login_user_name_toast">请输入手机号</string>
    <string name="text_login_user_passwd">密&#160;码&#160;&#160;</string>
    <string name="text_login_user_passwd_toast">请输入密码</string>
    <string name="text_login_forget_passwd">忘记密码</string>
    <string name="text_login">登录</string>
    <string name="text_login_display_passwd">显示密码</string>
    <string name="text_login_remenber_name">记住用户名</string>
    <string name="text_register">注册</string>
    <string name="text_user_register">用户注册</string>
    <string name="text_phone_number">手机号码：&#160;&#160;</string>
    <string name="text_check_number">验&#160;证&#160;码：&#160;&#160;</string>
    <string name="text_get_check_number">获取验证码</string>
    <string name="text_user_name">昵&#160;&#160;称：&#160;&#160;</string>
    <string name="text_user_true_name">真实姓名：&#160;&#160;</string>
    <string name="text_user_sex">性&#160;&#160;别：&#160;&#160;</string>
    <string name="text_card_class">证件类型：&#160;&#160;</string>
    <string name="text_card_id">证件号码：&#160;&#160;</string>
    <string name="text_user_role">您的身份：&#160;&#160;</string>
    <string name="text_user_email">Email：&#160;&#160;</string>
    <string name="text_email_at">"@"</string>
    <string name="text_login_passwd">登录密码：&#160;&#160;</string>
    <string name="text_once_agin">再次输入：&#160;&#160;</string>
    <string name="text_consume_passwd">消费密码：&#160;&#160;</string>
    <string name="text_Q_one">密保问题一：&#160;&#160;</string>
    <string name="text_Q_sec">密保问题二：&#160;&#160;</string>
    <string name="text_answer">答&#160;&#160;案：&#160;&#160;</string>
    <string name="text_message">消息</string>
    <string name="text_my_account">我的帐号</string>
    <string name="add_case_summit_null">病例组不能为空</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <!-- 首页 文字 -->
    <string name = "main_txt_mycase">我的病例</string>
    <string name = "main_txt_recommend">互助推荐</string>
    <string name = "main_txt_news">抗癌咨询</string>
    <string name = "main_txt_community">抗癌社区</string>
    <string name = "main_txt_keephealth">抗癌养生</string>
    <string name = "main_txt_assistant">抗癌助手</string>
    

</resources>