<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <FrameLayout style="@style/top" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/text_login_title"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/tv_title_back"
            android:layout_width="@dimen/title_height"
            android:layout_height="@dimen/title_height"
            android:layout_gravity="center_vertical|left"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/title_back"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/title_text_size" />

        <Button
            android:id="@+id/login_to_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="center"
            android:text="@string/text_register" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/regist_scroller"
        style="@style/body"
        android:background="#ffefebe7" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/login_page_input_name"
                        style="@style/userinfo_font"
                        android:text="@string/text_login_user_name"
                        android:textColor="#FF000000" />

                    <EditText
                        android:id="@+id/login_input_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_x"
                        android:hint="@string/text_login_user_name_toast"
                        android:numeric="integer"
                        android:singleLine="true"
                        android:textSize="16.0sp" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/login_page_input_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_login_user_passwd"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/login_input_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_x"
                        android:hint="@string/text_login_user_passwd_toast"
                        android:inputType="textPassword"
                        android:password="true"
                        android:singleLine="true"
                        android:textSize="16.0sp" />
                </TableRow>
            </TableLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/front_remenberMe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10.0dip"
                        android:background="@null"
                        android:button="@null"
                        android:drawableLeft="@drawable/btn_comment_sametime"
                        android:text="记住帐号"
                        android:textColor="#FF000000" />

                    <CheckBox
                        android:id="@+id/front_autoSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10.0dip"
                        android:background="@null"
                        android:button="@null"
                        android:drawableLeft="@drawable/btn_comment_sametime"
                        android:text="自动登录"
                        android:textColor="#FF000000" />
                </LinearLayout>

                <TextView
                    android:id="@+id/front_login"
                    android:layout_width="70.0dip"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right|bottom"
                    android:layout_marginLeft="15.0dip"
                    android:layout_toRightOf="@id/checkbox"
                    android:text="忘记密码" />
            </FrameLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/text_login" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>