<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <FrameLayout style="@style/top" >

        <TextView
            android:id="@+id/title_text"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/text_advice_detail"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/tv_title_back"
            android:layout_width="@dimen/title_height"
            android:layout_height="@dimen/title_height"
            android:layout_gravity="center_vertical|left"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/title_back"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/title_text_size" />

        <Button
            android:id="@+id/title_right_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="center"
            android:text="@string/text_register" 
            android:visibility="gone"/>
    </FrameLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />
    <TextView 
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>