<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="#FFFFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bg"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_more"
            android:textColor="#FF000000"
            android:textSize="18.0sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dp"
                android:background="@drawable/list_above"
                android:clickable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/moreitems_setting_icon" />

                <TextView
                    style="@style/more_font"
                    android:text="@string/setting" />

                <ImageView
                    style="@style/more_triangle"
                    android:background="@drawable/triangle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_mid"
                android:clickable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/moreitems_accountmanage_icon" />

                <TextView
                    style="@style/more_font"
                    android:text="@string/accountManage" />

                <ImageView
                    style="@style/more_triangle"
                    android:background="@drawable/triangle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_mid"
                android:clickable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/readmode_icon" />

                <TextView
                    style="@style/more_font"
                    android:text="@string/readMode" />

                <ImageView
                    style="@style/more_triangle"
                    android:background="@drawable/triangle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_mid"
                android:clickable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/moreitems_officialweibo_icon" />

                <TextView
                    style="@style/more_font"
                    android:text="@string/official" />

                <ImageView
                    style="@style/more_triangle"
                    android:background="@drawable/triangle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_mid"
                android:clickable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/moreitems_feedback_icon" />

                <TextView
                    style="@style/more_font"
                    android:text="@string/feedback" />

                <ImageView
                    style="@style/more_triangle"
                    android:background="@drawable/triangle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_mid"
                android:clickable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/moreitems_version" />

                <TextView
                    style="@style/more_font"
                    android:text="@string/version" />

                <ImageView
                    style="@style/more_triangle"
                    android:background="@drawable/triangle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_below"
                android:clickable="true"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/moreitems_about_icon" />

                <TextView
                    style="@style/more_font"
                    android:text="@string/about" />

                <ImageView
                    style="@style/more_triangle"
                    android:background="@drawable/triangle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>