<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_cart_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/body_bg" >

    <include layout="@layout/app_toptitle" />

    <LinearLayout
        style="@style/body"
        android:orientation="vertical"
        android:padding="10dp" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/zmoney_item_top" >

                <TextView
                    style="@style/register_font"
                    android:text="@string/text_phone_number" />

                <EditText
                    android:id="@+id/register_phone"
                    style="@style/register_editTxv_font"
                    android:layout_weight="1"
                    android:background="@null"
                    android:inputType="phone"
                    android:maxLength="11" />
            </TableRow>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/zmoney_item_line" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/zmoney_item_bottom" >

                <TextView
                    style="@style/register_font"
                    android:text="@string/text_check_number" />

                <EditText
                    android:id="@+id/register_check_number"
                    style="@style/register_editTxv_font"
                    android:layout_weight="1"
                    android:background="@null"
                    android:inputType="number"
                    android:maxLength="4" />

                <com.asht.view.CodeTextView
                    android:id="@+id/get_check_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_defalut_selector"
                    android:text="@string/text_get_check_number"
                    android:textColor="@color/title_text_color" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</FrameLayout>