<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/probject_bg"
    android:orientation="vertical" >

    <include layout="@layout/app_toptitle" />

    <ScrollView
        android:id="@+id/myscroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_bg_selector"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" >

                    <TextView
                        style="@style/register_font"
                        android:text="@string/text_user_name" />

                    <EditText
                        android:id="@+id/etx_nickname"
                        style="@style/register_editTxv_font"
                        android:layout_weight="1"
                        android:background="@null"
                        android:maxLength="16" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_bg_selector"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >

                    <TextView
                        style="@style/register_font"
                        android:text="@string/text_user_true_name" />

                    <EditText
                        android:id="@+id/etx_turename"
                        style="@style/register_editTxv_font"
                        android:layout_weight="1"
                        android:background="@null" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_bg_selector"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >

                    <TextView
                        style="@style/register_font"
                        android:text="@string/text_card_class" />

                    <Spinner
                        android:id="@+id/etx_certificateType"
                        style="@style/register_spinner"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:background="@null" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/triangle_down" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_bg_selector"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >

                    <TextView
                        style="@style/register_font"
                        android:text="@string/text_card_id" />

                    <EditText
                        android:id="@+id/etx_certificateNo"
                        style="@style/register_editTxv_font"
                        android:layout_weight="1"
                        android:background="@null" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_bg_selector"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >

                    <TextView
                        style="@style/register_font"
                        android:text="@string/text_user_role" />

                    <Spinner
                        android:id="@+id/etx_roleId"
                        style="@style/register_spinner"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:clickable="false"
                        android:background="@null" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/triangle_down" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_bg_selector"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >

                    <TextView
                        style="@style/register_font"
                        android:text="@string/text_user_email" />

                    <EditText
                        android:id="@+id/etx_mailePre"
                        style="@style/register_editTxv_font"
                        android:layout_weight="2"
                        android:background="@null" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>